WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266300
[GPU Process] Images with certain colorspaces cannot be rendered
https://bugs.webkit.org/show_bug.cgi?id=266300
Summary
[GPU Process] Images with certain colorspaces cannot be rendered
Said Abou-Hallawa
Reported
2023-12-12 12:49:24 PST
Open
https://en.wikipedia.org/wiki/Wilfrid_Laurier
Result: The image
https://commons.wikimedia.org/wiki/File:The_Honourable_Sir_Wilfrid_Laurier_Photo_C_(HS85-10-16873)_-_medium_crop_(cropped).jpg
is not displayed. When transferring the decoded NativeImage to GPUP we have to draw it to ShareableBitmap. To preserve the color space of the image, CGBitmapContextCreateWithData() is called with to create a CGContext with the image color space. CG can't create unaccelerated CGContext for all color spaces. So we fail to transfer the image to GPUP. In fact in debug build, the ASSERT_NOT_REACHED() in RemoteDisplayListRecorder::drawNativeImage() will fire when opening the wikipedia page or image.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2023-12-12 12:50:38 PST
rdar://118238178
Said Abou-Hallawa
Comment 2
2023-12-12 12:55:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21700
EWS
Comment 3
2024-01-18 18:02:38 PST
Committed
273204@main
(9d23c40ee7ce): <
https://commits.webkit.org/273204@main
> Reviewed commits have been landed. Closing PR #21700 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug