[GPU Process] Images with certain colorspaces cannot be rendered https://bugs.webkit.org/show_bug.cgi?id=266300 rdar://118238178

Reviewed by Cameron McCormack.

Check if the color space of the NativeImage is supported by CG for output before
creating ShareableBitmap. If it is not supported, fall back to SRGB.

* LayoutTests/fast/images/resources/green-100x100-unsupported-output-color-space.jpg: Added.
* LayoutTests/fast/images/unsupported-output-color-space-expected.html: Added.
* LayoutTests/fast/images/unsupported-output-color-space.html: Added.
* Source/WebKit/Shared/ShareableBitmap.cpp:
(WebKit::ShareableBitmap::createFromImageDraw):
* Source/WebKit/Shared/ShareableBitmap.h:
* Source/WebKit/WebProcess/GPU/graphics/RemoteResourceCacheProxy.cpp:
(WebKit::createShareableBitmapFromNativeImage)

Canonical link: https://commits.webkit.org/273204@main